# mlb

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  models.rst
examples/: season_summary.py  team_schedule.py
src/mlb/: __init__.py  client.py  constants.py
src/mlb/models/: __init__.py  api.py  domain.py
