[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb"
version = "1.1.0"
description = "A Python library for accessing MLB game and team data"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil",
    "cachetools",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[tool.setuptools.packages.find]
where = ["src"]
